# psw-manager

./: README.md
BACKEND/: .gitignore  CHANGELOG.md  Cargo.toml  Config.example.yaml
BACKEND/data/: openapi.yaml  redoc.html  swagger.html
BACKEND/src/: config.rs  main.rs
BACKEND/src/guards/: AuthGuard.rs  CorsFairing.rs  auth_guard.rs  cors_fairing.rs  mod.rs
BACKEND/src/guards_fairings/: auth_guard.rs  cors_fairing.rs  mod.rs  some_headers_fairing.rs
BACKEND/src/models/: PswRecord.rs  Tokens.rs  User.rs  access_token.rs  adecoder_check_pair.rs  http_exception.rs  mod.rs  raw_psw_record_model.rs  tokens_models.rs  typed_psw_record_model.rs  user_model.rs
BACKEND/src/routes/: PswRecordRoutes.rs  UserRoutes.rs  mod.rs  psw_record_routes.rs  static_routes.rs  user_routes.rs
BACKEND/src/services/: PswRecordService.rs  UserService.rs  adecoder_service.rs  mod.rs  psw_record_service.rs  user_service.rs
BACKEND/src/util/: api_responses.rs  gen_simple_hash.rs  mod.rs  my_either.rs  password_hasher.rs  rate_limiter.rs
FRONTEND/: index.html  package.json
FRONTEND/src/: App.vue  globals.ts  main.ts  style.css
FRONTEND/src/components/Content/: Content.vue
FRONTEND/src/components/Footer/: Footer.vue
FRONTEND/src/components/Header/: AccSection.vue  Header.vue
FRONTEND/src/stores/: IsDecodeAll.ts  ModalsStore.ts  RecordsStore.ts  UserStore.ts
FRONTEND/src/types/: PswRecord.ts  User.ts
FRONTEND/src/ui/: CopyButton.vue  FancyButton.vue  SpecialText.vue
FRONTEND/src/utils/: ADecoder.ts  downloadRecords.ts  textToColor.ts
(+12 files in other folders)
