[package]
name = "psw-manager-api"
version = "1.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.16.0"
chrono = "0.4.39"
futures = "0.3.31"
jsonwebtoken = "9.3.0"
mongodb = "3.1.1"
rand = "0.8.5"
redis = "0.27.6"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
